--- a/docs/instructions.ipynb
+++ b/docs/instructions.ipynb
@@ -17,6 +17,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# plotting"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
