--- a/docs/pair_counting.ipynb
+++ b/docs/pair_counting.ipynb
@@ -27,7 +27,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00a96797cce04de594ac7ff68cfd3eb7",
+       "model_id": "c92e9ca68dd5492ebfe549d55e88c2a8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -451,7 +451,9 @@
     "<div class=\"alert alert-info\">\n",
     "\n",
     "Exercise: Using the above formula\n",
+    "\n",
     "- Implement a function which takes tuples of (ra,dec) of two objects and returns the distance between them on the Unit sphere.\n",
+    "\n",
     "    Your code should return the result in units of arc seconds and not in radians.\n",
     "\n",
     "</div>"
@@ -521,7 +523,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `Brute force search for neighbour objects` within a specified distance \n",
+    "### Brute force search for neighbour objects within a specified distance \n",
     "time complexity ~ $\\mathcal{O}(n^2)$ "
    ]
   },
@@ -532,6 +534,7 @@
     "<div class=\"alert alert-info\">\n",
     "\n",
     "Exercise: \n",
+    "\n",
     "- write a function `find_neighbour_points` that uses (ra,dec) coordinates of an object, and within some given `rmax` distance, finds its neighbour points in the given dataFrame catalog.\n",
     "\n",
     "- Using this code you should be able to find neighbours of each object in the dataFrame - within the same dataFrame.\n",
@@ -1160,9 +1163,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8 (py38)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py38"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1174,7 +1177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
