update day2 for- removed pieces of codes

--- a/docs/pair_counting.ipynb
+++ b/docs/pair_counting.ipynb
@@ -452,10 +452,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img style=\"float: right;\" src=\"Equitorial_coord_sys.jpg\" width=\"300\" height=\"300\"/>\n",
-    "\n",
-    "\n",
-    "<!-- ![Equitorial_coord_sys.jpg >](Equitorial_coord_sys.jpg) -->\n",
+    "<img style=\"float: center;\" src=\"Equitorial_coord_sys.jpg\" width=\"300\" height=\"300\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$\\vec{r_i} = r_i(\\sin\\theta \\cos\\phi \\ \\hat{x}+ \\sin\\theta \\sin\\phi \\ \\hat{y} + \\cos\\theta \\ \\hat{z})$, $\\hspace{0.5cm}$for  $\\mathrm{i \\in (1,2)}$.\n",
     "\n",
     "$\\cos(\\theta)=\\frac{\\vec{r_1}\\cdot\\vec{r_2}}{r_1 r_2}$ <br>\n",
