--- a/docs/pair_counting.ipynb
+++ b/docs/pair_counting.ipynb
@@ -537,7 +537,7 @@
     "\n",
     "I get the following:\n",
     "\n",
-    "<img style=\"float: left;\" src=\"onsky_distance_test.png\" width=\"300\" height=\"300\"/>\n"
+    "<img style=\"float: left;\" src=\"onsky_distance_test.png\" width=\"100\" height=\"50\"/>\n"
    ]
   },
   {
@@ -800,8 +800,14 @@
     "\n",
     "Point marked as $\\star$ is the $15^{th}$ point. Other points are its neighbours.\n",
     "\n",
-    "<img style=\"float: left;\" src=\"neighbours_of_15th_obj.png\" width=\"500\" height=\"500\"/>\n",
-    "<img style=\"float: left;\" src=\"neighbours_printed.png\" width=\"500\" height=\"100\"/>\n"
+    "<img style=\"float: left;\" src=\"neighbours_of_15th_obj.png\" width=\"500\" height=\"500\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img style=\"float: center;\" src=\"neighbours_printed.png\" width=\"100\" height=\"50\"/>"
    ]
   },
   {
