--- a/docs/get_model.ipynb
+++ b/docs/get_model.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similar to day 3 tutorials, the reader has to fill in the blanks (??) in the code snippets.  "
+    "As this session assumes you have your own weak lensing signal so that you can model them. We understand coding up the lensing measurement part(Day 3 tutorial) is quite tedious. So, presently we will provide you the output file to use it for modelling and getting the halo mass constraits out of it. Similar to day 3 tutorials, the reader has to fill in the blanks (??) in the code snippets.  "
    ]
   },
   {
@@ -429,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
