--- a/docs/Untitled.ipynb
+++ b/docs/Untitled.ipynb
@@ -1,6 +1,102 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 4 - Model the weak lensing signal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similar to day 3 tutorials, the reader has to fill in the blanks (??) in the code snippets.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In last tutorial/lecture, we have discussed and coded up the R.H.S. of the equation given below, which is nothing but the **observed weak lensing signal**.\n",
+    "\n",
+    "$$\\Delta \\Sigma (R) = \\frac{\\sum_{ls} w_{\\rm ls} e_{t,ls} (\\Sigma^{-1}_{\\rm crit})^{-1}}{2\\mathcal{R} \\sum_{ls} w_{\\rm ls}}$$\n",
+    "\n",
+    "Now our aim today is to predict $\\Delta\\Sigma(R)$, which can be expressed as -\n",
+    "\n",
+    "$$\\Delta\\Sigma(R) \\equiv \\bar{\\Sigma}(<R)-\\langle \\Sigma \\rangle (R)$$\n",
+    "\n",
+    "where - \n",
+    "\n",
+    "- $\\bar{\\Sigma}(<R)$ : average projected mass density of the matter (dark+baryon) within $R$.\n",
+    "- $\\langle \\Sigma \\rangle (R)$ : azimuthally averaged projected mass (dark+baryon) density at $R$.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "To model the $\\Delta\\Sigma(R)$, we need to compute the surface mass density, from the 3-dimensional model of halo mass density profile given by **Navarro–Frenk–White (NFW) profile - [arXiv:astro-ph/9508025](https://arxiv.org/abs/astro-ph/9508025)** by integrating this along the line-of-sight.\n",
+    "  \n",
+    "$$\\mathbf{NFW\\ profile:} \\hspace{0.5 cm} \\rho(r) = \\frac{\\rho_0}{\\left(\\frac{r}{r_s}\\right) \\left(1+\\frac{r}{r_s}\\right)^2}$$\n",
+    "\n",
+    "$$\\rho_0 = \\delta_{c} \\rho_{m,0} \\hspace{0.2 cm} , \\hspace{0.2 cm} \\delta_{c} = \\frac{200}{3} \\frac{c^3}{\\ln{(1+c)}-\\frac{c}{1+c}}$$ \n",
+    "\n",
+    "\n",
+    "If we define $r_{200m}$ to be the radius at which the average density of the halo turns out to be 200 times the present **mean matter density** of the universe, $\\rho_{m,0}$, then -\n",
+    "\n",
+    "$$M_{200m} = \\frac{4 \\pi r^3_{200m}}{3} (200\\rho_{m,0})$$\n",
+    "\n",
+    "$r_{200m}$ is related to the concentration parameter by, $$c = r_{200m}/r_s$$\n",
+    "\n",
+    "\n",
+    "Following [Saas-Fee lectures,](https://link.springer.com/book/10.1007/978-3-540-30310-7), this line-of-sight integrated NFW expression i.e. surface mass density, at a given projected radius **R** is given by -\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "\\Sigma(R) &= {2r_s\\rho_0}\\ f(r/r_s) \\\\\n",
+    "f(x) &= \\frac{1}{x^2-1}(1-\\mathcal{F}(x)) \n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\mathcal{F}(x) = \n",
+    "\\begin{cases}\n",
+    "\\frac{{\\rm acosh}(1/x)}{\\sqrt{1-x^2}}, & \\text{for } x \\lt 1 \\\\\n",
+    "\\frac{{\\rm acos}(1/x)}{\\sqrt{x^2-1}}, & \\text{for } x \\gt 1 \\\\\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "f(x) = \\frac{1}{3} \\hspace{0.3 cm} , \\hspace{0.3 cm}  \\text{for } x = 1\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "**Notice :** NFW profile is a spherically symmetric profile. Hence its line-of-sight (LOS) integration will be symmetric w.r.t an axis passing through the cluster centre and perpendicular to the lens plane. Hence,\n",
+    "\n",
+    "$$\\Sigma(R) = \\langle \\Sigma \\rangle (R)$$\n",
+    "\n",
+    "You should use the above fact while implementing the modelling.\n",
+    "\n",
+    "**Notice:** We are using cluster centre as a proxy for the halo center. But there can always be some offset between them.\n",
+    "\n",
+    "And the surface mass density within a projected radius, $(<R)$ is given by - \n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "\\bar{\\Sigma}(<R) &= {2r_s\\rho_0}\\ h(r/r_s) \\\\\n",
+    "h(x) &= \\frac{2}{x^2} \\left[ \\mathcal{F}(x) + \\ln\\left( \\frac{x}{2} \\right) \\right] \\\\\n",
+    "h(1) &= 2 \\left[ 1 - \\ln (2) \\right]\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "**Thus these expression show that the whole dark matter distribution can be parametrized in terms of only two free parameters, namely - concentration (c) and $M_{200m}$.**\n",
+    "\n",
+    "**Note :** Weak gravitational lensing signal probes the total matter distribution around the lens systems (here: galaxy cluster systems). In clusters, the baryonic component only contribute dominantly in the inner regions (small projected radii), where the signal itself is very noisy, resulting in low signal-to-noise ratio. This happens because for smaller projected radii, the radial bin width becomes small due to logarithmic nature of radial binning which reduces the lens-source pair counts in such bins. Plus, the clusters are very bright in the inner regions, due to which a lot of galaxies are not identified by photometric surveys, leading to lack of sources in the inner regions. Thus these signals in the inner regions are not supposed to be very reliable. Thus we altogether ignore the baryonic contribution in the modelling of the weak lensing signals. Moreover, the inner regions don't contribute a lot in the determination of the average halo masses around the lenses.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -333,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
