--- a/docs/pair_counting.ipynb
+++ b/docs/pair_counting.ipynb
@@ -655,6 +655,8 @@
     "    \n",
     "- Access the above result and print indices,distances and coordinates of the neighbours of few objects.\n",
     "    \n",
+    "- Then test out the function `query_neighbour_points` for the same objects you take above.     \n",
+    "    \n",
     "</div>"
    ]
   },
