--- a/docs/pair_counting.ipynb
+++ b/docs/pair_counting.ipynb
@@ -1004,7 +1004,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Compare the output of our brute force algorithm with cKDTree algorithm on dew Demo objects"
+    "#### Compare the output of our brute force algorithm with cKDTree algorithm on few Demo objects"
    ]
   },
   {
