--- a/docs/pair_counting.ipynb
+++ b/docs/pair_counting.ipynb
@@ -655,7 +655,7 @@
     "    \n",
     "- Access the above result and print indices,distances and coordinates of the neighbours of few objects.\n",
     "    \n",
-    "- Then test out the function `query_neighbour_points` for the same objects you take above.     \n",
+    "- Then test out the function `query_neighbour_points` for the same objects you take above. The neighbour matches from `query_neighbour_points` and `find_neighbour_points` must match.   \n",
     "    \n",
     "</div>"
    ]
@@ -1020,6 +1020,8 @@
     "    feed them into the wrapper code of k-d tree written above, \n",
     "    \n",
     "    find out their neighbour points within the same `rmax`(default value)=15 arcsec.\n",
+    "    \n",
+    "    The neighbour objects found from both the methods should match!\n",
     "\n",
     "\n",
     "</div>"
