--- a/docs/pair_counting_solutions.ipynb
+++ b/docs/pair_counting_solutions.ipynb
@@ -9,116 +9,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<script>$(\"div.input\").hide()</script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e62bb7abcaa8457d89d57cf499f0d9b3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "ToggleButton(value=False, description='Show code')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<script>$(\"div.input\").show()</script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<script>$(\"div.input\").hide()</script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<script>$(\"div.input\").show()</script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import ipywidgets as widgets\n",
-    "from IPython.display import display, HTML\n",
-    "\n",
-    "javascript_functions = {False: \"hide()\", True: \"show()\"}\n",
-    "button_descriptions  = {False: \"Show code\", True: \"Hide code\"}\n",
-    "\n",
-    "def toggle_code(state):\n",
-    "\n",
-    "    \"\"\"\n",
-    "    Toggles the JavaScript show()/hide() function on the div.input element.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    output_string = \"<script>$(\\\"div.input\\\").{}</script>\"\n",
-    "    output_args   = (javascript_functions[state],)\n",
-    "    output        = output_string.format(*output_args)\n",
-    "\n",
-    "    display(HTML(output))\n",
-    "\n",
-    "\n",
-    "def button_action(value):\n",
-    "\n",
-    "    \"\"\"\n",
-    "    Calls the toggle_code function and updates the button description.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    state = value.new\n",
-    "\n",
-    "    toggle_code(state)\n",
-    "\n",
-    "    value.owner.description = button_descriptions[state]\n",
-    "\n",
-    "\n",
-    "state = False\n",
-    "toggle_code(state)\n",
-    "\n",
-    "button = widgets.ToggleButton(state, description = button_descriptions[state])\n",
-    "button.observe(button_action, \"value\")\n",
-    "\n",
-    "display(button)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [],
@@ -1284,9 +1174,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8 (py38)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py38"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1298,7 +1188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
