--- a/docs/pair_counting.ipynb
+++ b/docs/pair_counting.ipynb
@@ -551,7 +551,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Testing the above function `find_neighbour_points`  (brute force search)"
+    "#### Testing the above `brute force search` functions  "
    ]
   },
   {
